--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -974,13 +974,12 @@
         .cp-form-block-arrows {
             max-width: fit-content;
             margin-inline: auto;
-            padding: 5px;
+            padding: 6px;
             margin-top: -35px;
             border-radius: 0px @variables_radius 0px 0px;
-            .direction-arrow-down {
+            .fa-arrow-down {
                 margin-left: 20px; 
             }
-            background: fade(@cryptpad_text_col, 10%);
         }
     }
 
