Changed translation keys, alt>title

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -34,7 +34,7 @@
         background-color: @palette0;
         color: @cryptpad_color_grey_800;
         border-radius: @variables_radius @variables_radius 0px 0px;
-        button.kanban-edit-item {
+        button.kanban-edit-item, .cp-kanban.arrow {
             color: @cryptpad_color_grey_800;
         }
     }
@@ -170,7 +170,7 @@
         overflow: hidden;
     }
 
-    .kanban-edit-item {
+    .kanban-edit-item, .cp-kanban-arrow {
         border: 0;
         float:right;
         background: transparent;
@@ -185,6 +185,8 @@
             margin-right:0px;
         }
     }
+
+    
 
     .item-arrow-container {
         width: 17%;
