--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -61,6 +61,11 @@
                         }
                     }
                 }
+                &[data-item="add-admins"] {
+                    .cp-sidebar-form:not(:last-child) {
+                        margin-bottom: 1em;
+                    }
+                }
             }
         }
 }
