Set aria-hidden to true

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -34,7 +34,7 @@
         background-color: @palette0;
         color: @cryptpad_color_grey_800;
         border-radius: @variables_radius @variables_radius 0px 0px;
-        button.kanban-edit-item, .cp-kanban.arrow {
+        button.kanban-edit-item, .cp-kanban-arrow {
             color: @cryptpad_color_grey_800;
         }
     }
@@ -398,6 +398,7 @@
             flex-wrap: wrap;
             align-items: center;
             padding: 5px 10px;
+            // cursor: pointer;
             cursor: move;
             cursor: grab;
             .kanban-title-board {
