Change to rem unit #1722

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -613,7 +613,7 @@
                             margin-top: -10px;
                             margin-right: -10px;
                             &.cp-is-empty {
-                                max-height: fit-content;
+                                max-height: 2rem;
                                 padding: 3px;
                                 border: 2px solid @cryptpad_color_red;
                                 color: @cp_form-invalid;
