Enable toggling between editor and preview on mobile #1367

--- a/www/code/app-code.less
+++ b/www/code/app-code.less
@@ -137,7 +137,7 @@
     @media (max-width: @browser_media-medium-screen) {
         #cp-app-code-editor {
             &.cp-app-code-present {
-                #cp-app-code-container { display: none !important; }
+                //#cp-app-code-container { display: none !important; }
                 #cp-app-code-preview {
                     flex: 1;
                     max-width: 100%;
@@ -156,9 +156,9 @@
                         padding-bottom: 100px;
                     }
                 }
-                #cp-app-code-preview {
-                    display: none !important;
-                }
+                // #cp-app-code-preview {
+                //     display: none !important;
+                // }
             }
         }
     }
