--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -191,7 +191,7 @@
 
     .item-arrow-container {
         width: 100%;
-        margin-top: 2%;
+        margin-top: 5%;
         display: flex;
         justify-content: space-between;
         .fa-arrow-down {
@@ -539,7 +539,7 @@
                 margin-right: 10px;
             }
             
-            span, button {
+            button {
                 border: 0;
                 height: 30px;
                 width: 30px;
@@ -547,6 +547,7 @@
                 text-align: center;
                 display: inline-block;
                 background-color: @board-bg;
+                color: @cp_kanban-fg !important;
                 cursor: pointer;
                 &:hover {
                     background-color: darken(@board-bg, 10%);
@@ -566,21 +567,13 @@
         &:not(.cp-kanban-quick) {
             #cp-kanban-controls {
                 .cp-kanban-changeView {
-                    span.cp-kanban-view {
-                        background-color: @cp_kanban-fg !important;
-                        color: @cp_app-bg;
-                    }
                     button.cp-kanban-view {
-                        &:not(.toggle-active) {
-                            color: @cp_kanban-fg !important;
-                        }
+                        background-color: @cp_kanban-fg;
+                        color: @cp_app-bg !important;
                     }
+
                 }
             }
-        }
-        .toggle-active {
-            background-color: @cp_kanban-fg !important;
-            color: @cp_app-bg;
         }
         &.cp-kanban-quick {
             #cp-kanban-controls {
@@ -588,8 +581,8 @@
                     // span.cp-kanban-view {
                     // }
                     button.cp-kanban-view-small {
-                        background-color: @cp_kanban-fg !important;
-                        color: @cp_app-bg;
+                        background-color: @cp_kanban-fg;
+                        color: @cp_app-bg !important;
                     }
                 }
             }
@@ -597,6 +590,15 @@
                 .kanban-item-body, .kanban-item-tags {
                     display: none;
                 }
+            }
+        }
+        button.cp-kanban-view-drag {
+            &.toggle-active {
+                background-color: @cp_kanban-fg;
+                color: @cp_app-bg !important;
+            }
+            &.toggle-inactive {
+                color: @cp_kanban-fg;
             }
         }
     }
