--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -203,10 +203,27 @@
             //flex-wrap: wrap;
             overflow: auto;
 
+            .cp-form-view-drag {
+                width: 30px;
+                height: 30px;
+                border: none;
+                border-radius: 5px 0px 0px 5px;
+                background-color: @cp_form-bg1;
+                color: @cryptpad_text_col; 
+                &.toggle-active {
+                    color: @cp_form-bg1 !important;
+                    background-color: @cryptpad_text_col;
+                }
+            }
+            #toggle-drag-on {
+                border-radius: 0px 5px 5px 0px !important;
+            }
+
             @media screen and (max-width: 1000px) {
                 flex-wrap: wrap;
                 justify-content: flex-start;
                 .cp-form-creator-control {
+
                     width: 100% !important;
                     .cp-form-creator-settings {
                         display: flex;
@@ -223,6 +240,7 @@
                             flex: 1;
                             padding-right: 20px;
                         }
+
                     }
                 }
             }
@@ -585,6 +603,21 @@
                                 margin-top: -10px;
                                 margin-bottom: 1px;
                             }
+                        }
+                    }
+                    .cp-form-block-arrows {
+                        .cp-form-arrow {
+                            background-color: transparent;
+                            border: none;
+                            color:@cryptpad_text_col;
+                        }
+                        max-width: fit-content;
+                        margin-inline: auto;
+                        padding: 6px;
+                        margin-top: -35px;
+                        border-radius: 0px @variables_radius 0px 0px;
+                        .fa-arrow-down {
+                            margin-left: 20px; 
                         }
                     }
 
@@ -970,16 +1003,6 @@
             border-radius: 0px @variables_radius 0px 0px;
             i { margin-right: 5px; }
             background: fade(@cryptpad_text_col, 10%);
-        }
-        .cp-form-block-arrows {
-            max-width: fit-content;
-            margin-inline: auto;
-            padding: 6px;
-            margin-top: -35px;
-            border-radius: 0px @variables_radius 0px 0px;
-            .fa-arrow-down {
-                margin-left: 20px; 
-            }
         }
     }
 
