More corrections/refactoring

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -584,11 +584,11 @@
             }
         }
         button.cp-kanban-view-drag {
-            &.toggle-active {
+            &.cp-toggle-active {
                 background-color: @cp_kanban-fg;
                 color: @cp_app-bg !important;
             }
-            &.toggle-inactive {
+            &.cp-toggle-inactive {
                 color: @cp_kanban-fg;
             }
         }
