Add review changes #1722

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -613,10 +613,9 @@
                             margin-top: -10px;
                             margin-right: -10px;
                             &.cp-is-empty {
-                                max-height: fit-content;
+                                height: fit-content;
                                 padding: 3px;
-                                border: 2px solid @cp_alerts-danger-fg;
-                                border-radius: @variables_radius;
+                                border-radius: 0 @variables_radius 0 0;
                                 background-color: @cp_alerts-danger-bg;
                                 color: @cp_alerts-danger-text;
                             }
