update skip link design

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -448,10 +448,11 @@
             .cp-toolbar-skip-link {
                 position: absolute;
                 top: -100px;
-                left: 0;
+                left: 45%;
                 background-color: @cryptpad_color_brand;
                 color: @cryptpad_text_col;
-                padding: 8px 12px;
+                padding: 0.3rem 0.5rem;
+                font-size: 1rem;
                 text-decoration: none;
                 border-radius: @variables_radius;
                 z-index: 1000;
