Screen width formatting

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -210,7 +210,7 @@
                 border-radius: @variables_radius 0px 0px @variables_radius;
                 background-color: @cp_form-bg1;
                 color: @cryptpad_text_col; 
-                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px) {
+                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px), (max-width:379px) and (min-width:350px) {
                     border-radius: @variables_radius @variables_radius 0px 0px;
                 }
                 &.cp-toggle-active {
@@ -220,7 +220,7 @@
             }
             #cp-toggle-drag-on {
                 border-radius: 0px @variables_radius @variables_radius 0px !important;
-                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px) {
+                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px), (max-width:379px) and (min-width:350px) {
                     border-radius: 0px 0px @variables_radius @variables_radius !important;
                 }
             }
