Toggle styled horizontally

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -203,25 +203,24 @@
             //flex-wrap: wrap;
             overflow: auto;
 
-            .cp-form-view-drag {
-                width: 30px;
-                height: 30px;
-                border: none;
-                border-radius: @variables_radius 0px 0px @variables_radius;
-                background-color: @cp_form-bg1;
-                color: @cryptpad_text_col; 
-                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px), (max-width:379px) and (min-width:350px) {
-                    border-radius: @variables_radius @variables_radius 0px 0px;
+            .cp-drag-container {
+                display: flex;
+                flex-direction: row;
+
+                .cp-form-view-drag {
+                    width: 30px;
+                    height: 30px;
+                    border: none;
+                    border-radius: @variables_radius 0px 0px @variables_radius;
+                    background-color: @cp_form-bg1;
+                    color: @cryptpad_text_col; 
+                    &.cp-toggle-active {
+                        color: @cp_form-bg1;
+                        background-color: @cryptpad_text_col;
+                    }
                 }
-                &.cp-toggle-active {
-                    color: @cp_form-bg1;
-                    background-color: @cryptpad_text_col;
-                }
-            }
-            #cp-toggle-drag-on {
-                border-radius: 0px @variables_radius @variables_radius 0px !important;
-                @media (max-width:723px) and (min-width:693px), (max-width:553px) and (min-width:524px), (max-width:379px) and (min-width:350px) {
-                    border-radius: 0px 0px @variables_radius @variables_radius !important;
+                #cp-toggle-drag-on {
+                    border-radius: 0px @variables_radius @variables_radius 0px !important;
                 }
             }
 
