Fix initial tags state and UI issue

--- a/customize.dist/src/less2/include/colortheme-dark.less
+++ b/customize.dist/src/less2/include/colortheme-dark.less
@@ -164,6 +164,7 @@
 @cp_buttons-hover: @cryptpad_color_brand_fadest;
 @cp_buttons-default: @cryptpad_color_grey_700;
 @cp_buttons-default-color: @cryptpad_text_col;
+@cp_buttons-default-alt-color: @cryptpad_color_black;
 @cp_buttons-default-border: @cryptpad_text_col;
 @cp_buttons-red: #E55236;
 @cp_buttons-red-text: @cryptpad_color_light_red;
