--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -200,8 +200,8 @@
             }
         }
         &.btn-default-alt {
-            border-color: @cp_buttons-default;
-            color: @cp_buttons-default;
+            border-color: @cp_toolbar-bottom-fg;
+            color: @cp_toolbar-bottom-fg;
             background-color: @cp_buttons-default-color;
             &:hover, &:not(:disabled):active, &:focus {
                 border-color: @cp_buttons-default-color;
