--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -145,6 +145,9 @@
         margin-bottom: 15px;
     }
 
+    .cp-kanban-toggle-container.cp-kanban-container-flex {
+        flex: 1;
+    }
     .cp-kanban-toggle-tags {
         margin-right: 0.5rem;
     }
