Fix kanban header

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -376,6 +376,7 @@
             }
         }
         header {
+            display: flex;
             flex-wrap: wrap;
             align-items: center;
             padding: 5px 10px;
