Fix tags button style

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -149,7 +149,12 @@
         flex: 1;
     }
     .cp-kanban-toggle-tags {
+        text-transform: unset;
         margin-right: 0.5rem;
+        padding: 3px 10px;
+        span {
+            font: @colortheme_app-font;
+        }
     }
     #cp-kanban-edit-tags {
         .tokenfield {
