Fix kanban tags issues

--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -164,6 +164,7 @@
 @cp_buttons-default: #CCC;
 @cp_buttons-default-color: @cryptpad_text_col;
 @cp_buttons-default-border: @cryptpad_text_col;
+@cp_buttons-default-alt-color: @cryptpad_color_grey_50;
 @cp_buttons-red: #E55236;
 @cp_buttons-red-text: @cp_buttons-red;
 @cp_buttons-red-color: #FFF;
