--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -215,7 +215,10 @@
                     border: none;
                     border-radius: @variables_radius 0px 0px @variables_radius;
                     background-color: @cp_form-bg1;
-                    color: @cryptpad_text_col; 
+                    color: @cryptpad_text_col;
+                    &:focus-visible {
+                        outline: @variables_focus_style;
+                    }
                     &.cp-toggle-active {
                         color: @cp_form-bg1;
                         background-color: @cryptpad_text_col;
@@ -406,6 +409,9 @@
                             background-color: transparent;
                             border: none;
                             color: @cryptpad_text_col;
+                            &:focus-visible {
+                                outline: @variables_focus_style;
+                            }
                         }
                     }
                     .fa-ellipsis-h {
