add outline to buttons

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -553,6 +553,9 @@
                 &:last-child {
                     border-radius: 0px @variables_radius @variables_radius 0px;
                 }
+                &:focus-visible {
+                    outline: @variables_focus_style;
+                }
             }
         }
     }
