Add nowrap to calendar dropdown entries

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -217,6 +217,7 @@
                 .tui-full-calendar-content {
                     text-overflow: ellipsis;
                     overflow: hidden;
+                    white-space: nowrap;
                     font: @colortheme_app-font;
                     padding: 0 10px;
                     &:focus{
