add border radius to arrow buttons

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -410,6 +410,7 @@
                             border: none;
                             color: @cryptpad_text_col;
                             &:focus-visible {
+                                border-radius: @variables_radius;
                                 outline: @variables_focus_style;
                             }
                         }
