--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -449,8 +449,8 @@
                 position: absolute;
                 top: -100px;
                 left: 45%;
-                background-color: @cryptpad_color_brand;
-                color: @cryptpad_text_col;
+                background-color: @cp_buttons-primary;
+                color: @cp_buttons-primary-text;
                 padding: 0.3rem 0.5rem;
                 font-size: 1rem;
                 text-decoration: none;
