Implement fixes + add accessibility refactoring of buttons

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -31,6 +31,7 @@
             display: flex;
             flex-flow: column;
             align-items: start;
+            max-width: 100%;
         }
     }
     #cp-app-profile-avatar {
@@ -186,6 +187,7 @@
             font-family: monospace;
             font-size: 16px;
             line-height: initial;
+            width: 31rem;
             pre {
                 margin: 0;
                 font-family: inherit;
