fix text area responsiveness + add border-radius to buttons

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -187,7 +187,7 @@
             font-family: monospace;
             font-size: 16px;
             line-height: initial;
-            width: 31rem;
+            max-width: 31rem;
             pre {
                 margin: 0;
                 font-family: inherit;
