--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -64,13 +64,13 @@
     }
 
     .cp-markdown-toolbar {
-        height: @toolbar_line-height;
+        //height: @toolbar_line-height;
         background-color: @cp_toolbar-bg;
         color: @cp_toolbar-fg;
-        display: none;
         button {
             height: @toolbar_line-height !important;
             outline: 0;
+            border-radius: @variables_radius;
             color: @toolbar-color;
             .toolbar_button;
             font: normal normal normal 14px/1 FontAwesome;
