--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -67,6 +67,8 @@
         //height: @toolbar_line-height;
         background-color: @cp_toolbar-bg;
         color: @cp_toolbar-fg;
+        display: flex;
+        flex-wrap: wrap;
         button {
             height: @toolbar_line-height !important;
             outline: 0;
