--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -168,9 +168,12 @@
     #cp-app-profile-description {
         position: relative;
         font-size: 16px;
-        margin-bottom: 20px;
+        //margin-bottom: 20px;
         .cp-app-profile-description-code {
             display: none;
+        }
+        #cp-app-profile-description-info {
+            overflow-wrap: anywhere;
         }
         .cp-app-profile-description-ok, .cp-app-profile-description-spin {
             position: absolute;
