--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -64,11 +64,10 @@
     }
 
     .cp-markdown-toolbar {
-        //height: @toolbar_line-height;
+        height: @toolbar_line-height;
         background-color: @cp_toolbar-bg;
         color: @cp_toolbar-fg;
-        display: flex;
-        flex-wrap: wrap;
+        display: none;
         button {
             height: @toolbar_line-height !important;
             outline: 0;
